--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -1,16 +1,14 @@
-#Sam Cullen
-#Used to contain commands to compile projects
+# Sam Cullen
+# C00250093
+# Make file for Reusable Barrier lab
 CC=g++
-CPPFILES=Barrier.cpp main.cpp Semaphore.cpp
-HFILES=Barrier.h Semaphore.h
-CFLAGS= -std=c++11 -Wall -pthread -I.
-OBJFILES=Barrier.o main.o Semaphore.o
+CFLAGS= -std=c++11 -pthread -I.
 
 %.o: %.cpp
 	$(CC) -c -o $@ $< $(CFLAGS) $(DEBUGFLAGS)
 
-ALL: $(OBJFILES) $(HFILES)
-	$(CC) -o barrier $(OBJFILES) $(CFLAGS) $(DEBUGFLAGS) 
+ALL: Semaphore.o Barrier.o main.o
+	$(CC) -o barrier Semaphore.o Barrier.o main.o $(CFLAGS) $(DEBUGFLAGS) 
 
 DEBUG: DEBUGFLAGS = -g -O0
 DEBUG: ALL
